data/derived/comb/progs/unify/prog6308.ml.out
Characters 71-75:
  List.fold_right f base xs;;
                    ^^^^
Error: This expression has type int but an expression was expected of type
         'a list
